--- a/shiva.html
+++ b/shiva.html
@@ -3,7 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css" />
+    <title>ShivaRoozbahani</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <nav>
+        <a href="./index.html" class="home">Home</a>
+      </nav>
+    </header>
+
+    <main></main>
+
+    <footer></footer>
+  </body>
 </html>
